Map stretching fix

--- a/assets/css/additions.css
+++ b/assets/css/additions.css
@@ -5,8 +5,12 @@
     
 }
 
+.mapboxgl-canvas {
+	height: 450px !important;
+}
+
 .map {
-	margin: 20px 0;
+	margin: 20px 0 40px 0;
 }
 
 .clearfix {
